# lms-back

./: .env_example  .gitignore  README.md  docker-compose.local.yml  docker-compose.yaml  pyproject.toml
admin/: dockerfile  pyproject.toml
admin/config/: admin.py  gunicorn_config.py  managers.py  models.py  settings.py  urls.py
content/: app.py  dockerfile  lifespan.py  pyproject.toml
content/api/: __init__.py
content/api/v1/: __init__.py  auth.py  course.py  module.py  task.py  unit.py  user_answer.py
content/broadcast/: __init__.py  playmobile.py
content/core/: __init__.py  config.py  hasher.py  logger.py  security.py  utils.py
content/dal/: __init__.py  postgres.py
content/db/: postgres.py  redis.py
content/exceptions/: __init__.py
content/factories/: __init__.py
content/handlers/: __init__.py  auth_jwt.py
content/interfaces/: hasher.py  storage.py  strategy.py
content/middlewares/: main.py
content/models/: __init__.py  base.py  managers.py
content/models/courses/: __init__.py  choices.py  course.py  moduls.py  result.py  tasks.py
content/models/payments/: models.py
content/models/users/: __init__.py  choices.py  models.py
content/repositories/: __init__.py  student.py
content/schemas/: __init__.py  auth.py  course.py  modules.py  task.py  unit.py  user.py
content/schemas/responses/: auth.py  user_answer.py
content/services/: auth.py  course.py  module.py  task.py  unit.py  user_answer.py
content/storages/: __init__.py  cashe.py  user.py
content/strategies/: student.py
load_balancers/: content_api.conf  django_admin.conf  nginx.conf
nginx/: content_api_lb.conf
(+36 files in other folders)
