[tool.poetry]
name = "scholar-lms"
version = "0.1.0"
description = ""
authors = ["SultanovvAsadbek <sultanovvasadbek0101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
django-ckeditor = "^6.7.1"
django-jazzmin = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
